# MeshGatewayAPP_QT

./: .gitignore  CMakeLists.txt  add_padding.py  main.cpp
.github/workflows/: build.yml
Android/: AndroidManifest.xml.in  CMakeLists.txt
Android/res/values/: strings.xml  styles.xml
Android/res/values-zh/: strings.xml
Debian/: CMakeLists.txt
Harmony/: CMakeLists.txt
HarmonyOS/: CMakeLists.txt
IOS/: CMakeLists.txt  Info.plist.in  LaunchScreen.storyboard
IOS/en.lproj/: InfoPlist.strings
IOS/header/: iosutil.h
IOS/src/: iosutil.mm
IOS/zh-Hans.lproj/: InfoPlist.strings
MacOS/: CMakeLists.txt
Qt/header/ble/: blemanager.h
Qt/header/core/: imagerleencoder.h  imageutils.h  meshprotocol.h  nodeimagestore.h
Qt/header/net/: sockettransport.h
Qt/header/utils/: stylemanager.h
Qt/header/widget/: connectedpage.h  cropimagedialog.h  imagepreviewdialog.h  mainwindow.h  nodeactiondialog.h  scanpage.h  senddialog.h
Qt/resource/: resources.qrc
Qt/resource/style/: style.qss
Qt/resource/translation/: NearLink_Mesh_zh_CN.qm  NearLink_Mesh_zh_CN.ts
Qt/src/ble/: blemanager.cpp
Qt/src/core/: imagerleencoder.cpp  imageutils.cpp  meshprotocol.cpp  nodeimagestore.cpp
Qt/src/net/: sockettransport.cpp
Qt/src/utils/: stylemanager.cpp
Qt/src/widget/: connectedpage.cpp  cropimagedialog.cpp  imagepreviewdialog.cpp  mainwindow.cpp  nodeactiondialog.cpp  scanpage.cpp  senddialog.cpp
Windows/: CMakeLists.txt
sle_mesh_networking/: CMakeLists.txt  sle_uart.c
sle_mesh_networking/epaper/: epaper.h  epaper_init.c
sle_mesh_networking/mesh/common/: mesh_config.h
sle_mesh_networking/mesh/gateway/: ble_gateway.c
sle_mesh_networking/mesh/image/: image_receiver.c  image_receiver.h  jpeg_decoder.c  jpeg_decoder.h  tjpgd.c  tjpgd.h
sle_mesh_networking/mesh/network/: mesh_main.c
sle_mesh_networking/wifi/: wifi_socket_server.c  wifi_socket_server.h  wifi_softap.c  wifi_softap.h
